[package]
name = "dmx"
version = "0.2.0"
authors = ["Guilhem Saurel <guilhem.saurel@laas.fr>"]
edition = "2018"
categories = ["embedded", "hardware-support", "no-std", "science::robotics"]
description = "Rust implementation of the Robotis Dynamixel motor protocol."
exclude = ["memory.x"]

[features]
default = []
stm32 = ["cortex-m", "cortex-m-rt", "rtt-target", "panic-rtt-target", "stm32f1xx-hal"]
std = ["serialport"]

[dependencies]
crc16 = "0.4.0"
nb = "1.0.0"
embedded-hal = "0.2.4"
dummy-pin = "0.1.1"

cortex-m = { version = "0.6.4", optional = true }
cortex-m-rt = { version = "0.6.13", optional = true }
rtt-target = { version = "0.3.0", features = ["cortex-m"] , optional = true}
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] , optional = true}
stm32f1xx-hal = { version = "0.7.0", features = ["rt", "stm32f103", "medium"], optional = true }

serialport = { version = "4.0.1", optional = true }
heapless = "0.7.16"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
